--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   just_audio: ^0.1.3
   loading: ^1.0.2
   equatable: ^1.1.1
+  dio: ^3.0.9
+  dio_http_cache: ^0.2.6
 
   cupertino_icons: ^0.1.2
 
