--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   equatable: ^1.1.1
   dio: ^3.0.9
   dio_http_cache: ^0.2.6
+  cached_network_image: ^2.0.0
+  flutter_svg: ^0.17.3+1
 
   cupertino_icons: ^0.1.2
 
